Finished Level 3 With The Hero Image

--- a/omarHTML3.html
+++ b/omarHTML3.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="final-style.css">
 </head>
 <body>
-  <header class="hero-image">
-    <img src="#" alt="Hero Image">
+
+  <header>
+    <img src="Assets/hero.png" alt="Hero Image">
   </header>
 
   <div class="menu">
