Finsihed Level 1 + Fixed Some Minor Markup

--- a/omarHTML1.html
+++ b/omarHTML1.html
@@ -11,12 +11,12 @@
   </header>
 
   <h1><strong>HTML CHALLENGE - Omar Chouman</strong></h1>
-  <p><i>This is a basic html training & challenge for codi students.<i></p>
-  <img src="Assets/html.png" alt="HTML IMAGE"> 
+  <p><i>This is a basic html training & challenge for codi students.</i></p>
+  <img src="Assets/html.png" alt="HTML IMAGE" /> 
 
   <h2>Here I'll Use <q>Quotations</q> ipsum dolor sit amet consectetur adipisicing elit. At qui molestias minima doloremque sunt amet, officiis consequuntur quae, quisquam veritatis pariatur, laborum omnis commodi fuga est. Vero consectetur totam doloribus?</h2>
 
-  <h4><b>Here I'll Put A Line Break<b> <br>
+  <h4> <b>Here I'll Put A Line Break</b> <br />
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde perspiciatis enim iusto aperiam eveniet blanditiis. Consectetur delectus saepe provident harum assumenda! Ullam, expedita distinctio. Consectetur et sit esse deserunt! Tenetur?</h4>
 
   <footer>footer</footer>
