Finsihed Level 2 + Fixed Some Minor Markup

--- a/omarHTML2.html
+++ b/omarHTML2.html
@@ -20,11 +20,11 @@
 
   <h1>HTML CHALLENGE - Omar Chouman</h1>
   <p>This is a basic html training & challenge for codi students.</p>
-  <img src="Assets/html.png" alt="HTML IMAGE"> 
+  <img src="Assets/html.png" alt="HTML IMAGE" /> 
 
   <h2>Here I'll Use <q>Quotations</q> ipsum dolor sit amet consectetur adipisicing elit. At qui molestias minima doloremque sunt amet, officiis consequuntur quae, quisquam veritatis pariatur, laborum omnis commodi fuga est. Vero consectetur totam doloribus?</h2>
 
-  <img src="https://news.mit.edu/sites/default/files/styles/news_article__image_gallery/public/images/202012/MIT-Coding-Brain-01-press_0.jpg?itok=JKoUflf8" alt="Coding">
+  <img src="https://news.mit.edu/sites/default/files/styles/news_article__image_gallery/public/images/202012/MIT-Coding-Brain-01-press_0.jpg?itok=JKoUflf8" alt="Coding" />
 
   <ol>
     <li>Coding is awesome</li>
@@ -34,7 +34,7 @@
     <li>Coding is a way to bring your ideas into life</li>
   </ol>
 
-  <h4><b>Here I'll Put A Line Break<b> <br>
+  <h4><b>Here I'll Put A Line Break</b> <br />
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde perspiciatis enim iusto aperiam eveniet blanditiis. Consectetur delectus saepe provident harum assumenda! Ullam, expedita distinctio. Consectetur et sit esse deserunt! Tenetur?</h4>
 
   <footer><a href="https://codi.tech/">Got To Codi's Official Website</a></footer>
