Finsihed Level 3 With Image + Fixed Some Minor Markup

--- a/omarHTML3.html
+++ b/omarHTML3.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <img src="Assets/hero.png" alt="Hero Image">
+    <img src="Assets/hero.png" alt="Hero Image" />
   </header>
 
   <div class="menu">
@@ -56,7 +56,7 @@
   <section class="gallery-subscription-services">
     <div class="gallery">
     <h1>Gallery</h1>
-    <hr width="350px" />
+    <hr />
     <br />
     <p class="gallery-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio a sit ad consequatur vitae porro eos eum quibusdam deleniti assumenda non consectetur ex nam voluptates, labore minima eligendi commodi corporis!</p>
     </div>
@@ -65,7 +65,7 @@
     <div class="container">
     <div class="part-1">
       <h1>Subscription</h1>
-      <hr width="350px" />
+      <hr />
       <br />
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi maxime nemo accusamus itaque cum rerum error, necessitatibus, molestiae ipsum expedita nulla tenetur dolorem, iste corrupti laborum veniam aspernatur numquam excepturi.</p>
       <br />
@@ -74,7 +74,7 @@
 
     <div class="part-2">
       <h1>Other Services</h1>
-      <hr width="350px" />
+      <hr />
       <br />
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi maxime nemo accusamus itaque cum rerum error, necessitatibus, molestiae ipsum expedita nulla tenetur dolorem, iste corrupti laborum veniam aspernatur numquam excepturi.</p>
       <br />
@@ -113,7 +113,7 @@
             </form>
         <br />
   <footer>
-    <hr width="60%" style="margin:auto;" /> 
+    <hr /> 
     <br />
     <p>Copyright &copy; 2021</p>
     <br />
